# rules_js

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelrc.common  .bazelrc.testing  .bazelversion  .eslintrc.yml  .gitattributes  .gitignore  .lychee.toml  .npmrc  .pnpmfile.cjs  .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  eslint.config.mjs  go.mod  go.sum  hidden-files.patch  in_each_e2e.sh  internal_deps.bzl  lychee.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  resolved.bzl  test.sh  update-snapshots.sh  version.bzl  workspace_status.sh
.aspect/bazelrc/: .gitignore  BUILD.bazel  bazel7.bazelrc  correctness.bazelrc
.github/workflows/: BUILD.bazel  bazel7.bazelrc  bcr-fork.yml  bcr.yml  buildifier.yaml  ci-vanilla-bazel.yaml  ci-workflows.yaml  ci.bazel5.bazelrc  ci.bazelrc  ci.yaml  create-bcr-entry.mjs  mirror.yaml  new_issue.yaml  new_issue_labels.yaml  new_issue_project.yaml  new_pr.yaml  publish.yaml  release.yaml  release.yml  release_docs.sh  release_prep.sh  tag.yaml  workspace_snippet.sh
contrib/nextjs/: BUILD.bazel  README.md  defs.bzl  next.bazel.mjs
contrib/wasm_bindgen/: BUILD.bazel  README.md  defs.bzl
docs/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  docs.bzl  faq.md  js_binary.md  js_filegroup.md  js_image_layer.md  js_info_files.md  js_library.md  js_package.md  js_run_binary.md  js_run_devserver.md  js_test.md  link_js_package.md  link_node_package.md  link_npm_package.md  migrate.md  migrate_2.md  migration.md  nextjs.md  node_package.md  nodejs_binary.md  nodejs_package.md  nodejs_test.md  npm_import.md  npm_link_all_packages.md  npm_link_package.md  npm_package.md  npm_translate_lock.generated.md  npm_translate_lock.md  pnpm.md  run_js_binary.md  translate_pnpm_lock.md  troubleshooting.md  use_execroot_entry_point.md
docs/tools/: BUILD.bazel
e2e/bzlmod/: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  aspect-bazel-lib.patch  main.mjs  package.json  pnpm-lock.yaml  pnpm_versions.test.mjs
e2e/coverage/: BUILD.bazel  MODULE.bazel  first_party.js  first_party_jslib.js  lib.js  test.js  test.sh
e2e/git_dep_metadata/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  no_git_metadata_test.sh
e2e/git_dep_no_tar/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  no_git_tar_test.sh  package.json  pnpm-lock.yaml
e2e/gyp_no_install_script/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  test.js
e2e/js_binary_workspace/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  test.sh
example/: BUILD.bazel  case8.json  npm_imports.bzl  package-lock.json  package.json  peer.js  pnpm-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  test-a.patch  test-a@0.0.1.patch  translate_pnpm_lock.bzl
example/lib/: BUILD.bazel  index.js
example/run_js_binary/: BUILD.bazel  copy.js
example/ts_lib/: BUILD.bazel  foo.ts
examples/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/assert_lockfile_up_to_date/: BUILD  README.md  assert_lockfile_frozen.js  copy_to_workspace.sh  package.json  pnpm-lock.yaml  update_lockfile.js
examples/build_with_node_gyp/: BUILD.bazel  package.json  peer_test.js
examples/bun/: BUILD.bazel  a.ts
examples/coverage/: BUILD.bazel  coverage.js  test.js
examples/genrule/: BUILD.bazel
examples/js_binary/: BUILD.bazel  custom_rule.bzl  npm_version_test.js  package.json  require_acorn.cjs  require_acorn.mjs  test.js  test.mjs
examples/js_binary_gen/: BUILD.bazel  genjs_rule.bzl
examples/lib/: BUILD.bazel  README.md  index.js  package.json
examples/linked_consumer/: BUILD.bazel  package.json  test_file_all_linked.js  test_pkg_deps_linked.js
examples/linked_empty_node_modules/: BUILD.bazel  package.json
examples/linked_lib/: BUILD.bazel  index.js  package.json
examples/linked_pkg/: BUILD.bazel  index.js  package.json
examples/macro/: BUILD.bazel  README.md  mocha-docs.md  mocha.bzl  mocha_reporters.json  package.json  test.cjs  test.js  test.mjs
examples/mocha/: BUILD.bazel  README.md  mocha.bzl  test.js
examples/nextjs/: BUILD.bazel  next.config.js  next.standalone.mjs  package.json  postcss.config.mjs  server_test.sh
examples/nextjs14/: BUILD.bazel  README.md  next.standalone.mjs  package.json
examples/nextjs15/: BUILD.bazel  next.config.mjs  package.json
examples/npm_deps/: BUILD.bazel  package.json  patched-dependencies-test.js  peer_test.js
examples/npm_package/: README.md
examples/npm_translate_package_lock/: BUILD.bazel  package-lock.json  package.json
examples/proto/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  foo.proto  foo_pb.d.ts  js_proto_test.bzl  js_proto_transition_library.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  status.proto  status_pb.d.ts  test_proto.js  use_proto.js  user.proto  (+1 more)
gazelle/: BUILD.bazel  README.md  config.go  config_test.go  configure.go  deps.bzl  fix.go  generate.go  generate_test.go  kinds.go  language.go  logging.go  node_std_modules.go  node_std_modules.js  parser.go  parser_test.go  resolve.go  target.go  ts.go  ts_test.go
js/: BUILD.bazel  bazel-lib-2.0-compat.patch  configure.bzl  defs.bzl  dev_repositories.bzl  extensions.bzl  js_binary.bzl  js_package.bzl  js_test.bzl  libs.bzl  link_js_package.bzl  link_node_package.bzl  merge_deps.bzl  node_package.bzl  nodejs_binary.bzl  nodejs_package.bzl  nodejs_test.bzl  npm_import.bzl  proto.bzl  providers.bzl  repositories.bzl  rpc.bzl  run_binary.bzl  run_js_binary.bzl  toolchains.bzl  translate_pnpm_lock.bzl
mylang/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl
npm/: BUILD.bazel  defs.bzl  extensions.bzl  npm_import.bzl  npm_translate_lock.bzl  providers.bzl  repositories.bzl  update_translate_lock_data.sh
peer_deps/: BUILD.bazel  package.json  pnpm-lock.json  pnpm-lock.yaml
test/: BUILD.bazel  package-lock.json
tools/: BUILD.bazel  e2e_with_bazel_lib_2.bzl  preset.bazelrc  update-snapshots.sh
(+1728 files in other folders)
