"aspect-build/rules_js"

module(
    name = "aspect_rules_js",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "1.27.2")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_nodejs", version = "5.8.2")
bazel_dep(name = "platforms", version = "0.0.4")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

use_repo(node, "nodejs_toolchains")

use_repo(node, "nodejs_linux_amd64")
use_repo(node, "nodejs_darwin_arm64")
use_repo(node, "nodejs_darwin_amd64")
use_repo(node, "nodejs_linux_arm64")
use_repo(node, "nodejs_linux_s390x")
use_repo(node, "nodejs_linux_ppc64le")
use_repo(node, "nodejs_windows_amd64")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

pnpm.pnpm(
    name = "pnpm",
)

use_repo(pnpm, "pnpm")

