load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "js_binary",
    bzl_library_target = "//js/private:js_binary",
)

stardoc_with_diff_test(
    name = "js_library",
    bzl_library_target = "//js/private:js_library",
)

stardoc_with_diff_test(
    name = "run_js_binary",
    bzl_library_target = "//js/private:run_js_binary",
)

stardoc_with_diff_test(
    name = "npm_package",
    bzl_library_target = "//npm/private:npm_package",
)

stardoc_with_diff_test(
    name = "npm_link_package",
    bzl_library_target = "//npm/private:npm_link_package",
)

stardoc_with_diff_test(
    name = "npm_import",
    bzl_library_target = "//npm:npm_import",
)

update_docs(name = "update")
