load(":docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "js_binary",
    bzl_library_target = "@aspect_rules_js//js/private:js_binary",
)

stardoc_with_diff_test(
    name = "js_library",
    bzl_library_target = "@aspect_rules_js//js/private:js_library",
)

stardoc_with_diff_test(
    name = "js_run_binary",
    bzl_library_target = "@aspect_rules_js//js/private:js_run_binary",
)

stardoc_with_diff_test(
    name = "js_run_devserver",
    bzl_library_target = "@aspect_rules_js//js/private:js_run_devserver",
    symbol_names = ["js_run_devserver"],
)

stardoc_with_diff_test(
    name = "js_info_files",
    bzl_library_target = "@aspect_rules_js//js/private:js_info_files",
)

stardoc_with_diff_test(
    name = "js_image_layer",
    bzl_library_target = "@aspect_rules_js//js/private:js_image_layer",
)

stardoc_with_diff_test(
    name = "npm_package",
    bzl_library_target = "@aspect_rules_js//npm/private:npm_package",
)

stardoc_with_diff_test(
    name = "npm_link_package",
    bzl_library_target = "@aspect_rules_js//npm/private:npm_link_package",
)

stardoc_with_diff_test(
    name = "npm_link_all_packages",
    bzl_library_target = "@aspect_rules_js//npm/private:npm_translate_lock_generate.docs",
)

stardoc_with_diff_test(
    name = "npm_import",
    bzl_library_target = "@aspect_rules_js//npm/private:npm_import",
    symbol_names = [
        "npm_import",
    ],
)

stardoc_with_diff_test(
    name = "npm_translate_lock",
    bzl_library_target = "@aspect_rules_js//npm/private:npm_translate_lock",
    symbol_names = [
        "list_patches",
        "npm_translate_lock",
    ],
)

stardoc_with_diff_test(
    name = "nextjs",
    bzl_library_target = "@aspect_rules_js//contrib/nextjs:defs",
)

update_docs(name = "update")
