bazel_dep(name = "aspect_bazel_lib", version = "2.21.0")
bazel_dep(name = "aspect_rules_js", version = "0.0.0")
bazel_dep(name = "stardoc", version = "0.6.2", repo_name = "io_bazel_stardoc")

local_path_override(
    module_name = "aspect_rules_js",
    path = "..",
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "stardoc-prebuilt",
    integrity = "sha256-jDi5ITmziwwiHCsfd8v0UOoraWXIAfICIll+wbpg/vE=",
    # NB: version matches the stardoc load above
    urls = ["https://github.com/alexeagle/stardoc-prebuilt/releases/download/v0.6.2/renderer_deploy.jar"],
)
